# hyperwhisper

./: .gitignore  BUILD.md  BUILD_SCRIPTS_README.md  I18N_REFACTORING_PLAN.md  I18N_RTL_IMPLEMENTATION_SUMMARY.md  ICONS_REQUIRED.txt  LICENSE  LOCALIZATION.md  PROJECT_STRUCTURE.txt  PROJECT_SUMMARY.md  README.md  SETUP_NOTES.md  SIGNING_SETUP.md  WHISPER_INTEGRATION_PROGRESS.md  build-android.sh  build-cloud.sh  build.gradle.kts  build.sh  download-cloud-build.sh  gradle.properties  settings.gradle.kts  setup-wrapper.sh
.github/workflows/: build-apks.yml  build-native.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/cloud/java/com/hyperwhisper/di/: FlavorModule.kt
app/src/cloud/java/com/hyperwhisper/network/: LocalWhisperStrategyStub.kt
app/src/cloudOnly/java/com/hyperwhisper/di/: FlavorModule.kt
app/src/local/java/com/hyperwhisper/di/: FlavorModule.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  audio_converter.cpp  whisper_jni.cpp
app/src/main/java/com/hyperwhisper/ime/: HyperWhisperApplication.kt
app/src/main/jniLibs/: README.md
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  method.xml
cloud-builds/: latest
cloud-builds/20251230_042856/: summary.txt
cloud-builds/20251230_043706/: summary.txt
cloud-builds/20251230_044138/: summary.txt
cloud-builds/20251230_044803/: summary.txt
cloud-builds/20251230_045537/: summary.txt
cloud-builds/20251230_050306/: summary.txt
(+38 files in other folders)
